# cvrp_hgs

./: Cargo.toml  README.md
benches/: algorithm_bench.rs
examples/: basic.rs
src/: config.rs  genetic.rs  individual.rs  lib.rs  local_search.rs  population.rs  problem.rs  solution.rs  split.rs  utils.rs
src/local_search/: README.md  mod.rs  relocate.rs  swap.rs  swap_star.rs  two_opt.rs  two_opt_star.rs  utils.rs
tests/: README.md  algorithm_integration_tests.rs  genetic_tests.rs  local_search_integration_tests.rs  local_search_tests.rs  solution_tests.rs  split_tests.rs  utils_tests.rs
