[package]
name = "hgs_cvrp"
version = "0.1.0"
edition = "2021"
authors = ["Jens-Peter Joost"]
description = "Implementation of Hybrid Genetic Search for Capacitated Vehicle Routing Problem"
license = "MIT"
repository = "https://github.com/jpjj/cvrp_hgs"
keywords = ["optimization", "vehicle-routing", "cvrp", "genetic-algorithm"]
categories = ["algorithms", "science"]

[features]
default = []
bench = ["criterion"]

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
petgraph = "0.6.3"
clap = { version = "4.3.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
itertools = "0.10.5"
criterion = { version = "0.5.1", optional = true }

[dev-dependencies]

[[bench]]
name = "algorithm_bench"
harness = false
required-features = ["bench"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
opt-level = 1

[lib]
name = "hgs_cvrp"
path = "src/lib.rs"